# OBS-ONNX-Runtime

./: README.md  inspect_onnx_model.py  install_latest_build.ps1
.copilot/: rules.md
Docs/: Architecting High-Performance Computer Vision Plugins for OBS Studio 32.md  OBS ONNX Runtime Plugin Development Guide.txt  Plugin.txt
obs-onnx-plugin/: .gitignore  CMakeLists.txt
obs-onnx-plugin/cmake/: bin2header.cmake
obs-onnx-plugin/data/locale/: en-US.ini
obs-onnx-plugin/data/shaders/: nchw_to_rgba.hlsl  postprocess_rgba.hlsl  preprocess_nchw.hlsl  rgba_to_nchw.hlsl
obs-onnx-plugin/models/: README.md
obs-onnx-plugin/src/: ai-engine.cpp  ai-engine.hpp  filter-source-advanced.cpp  filter-source.cpp  filter-source.hpp  gpu-interop.cu  gpu-interop.cuh  plugin-main.cpp
